--- a/main.html
+++ b/main.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div style="text-align: center; padding: 20px;">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification_subtext">We emailed you the six digit code to acciojob@email.com. Enter the code below to confirm your email address.</p>
+		<div class="code-container" style="display: flex; justify-content: center; gap: 10px; margin: 20px 0;">
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+		</div>
+	</div>
+	<script type="text/javascript" src="./script.js">
+		const inputs = document.querySelectorAll('.code');
+		inputs.forEach((input, index) => {
+			input.addEventListener('input', () => {
+				if (input.value.length === 1 && index < inputs.length - 1) {
+					inputs[index + 1].focus();
+				}
+			});
+			input.addEventListener('keydown', (e) => {
+				if (e.key === 'Backspace' && input.value === '' && index > 0) {
+					inputs[index - 1].value = '';
+					inputs[index - 1].focus();
+				}
+			});
+		});
+		inputs[0].focus();
+	</script>
 </body>
-
 </html>
