--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 		<h1 id="verification_heading">Verify Your Account</h1>
 		<p id="verification_subtext">We emailed you the six digit code to acciojob@email.com. Enter the code below to confirm your email address.</p>
 		<div class="code-container" style="display: flex; justify-content: center; gap: 10px; margin: 20px 0;">
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
-			<input type="text" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-1" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-2" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-3" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-4" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-5" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
+			<input type="text" id="code-6" maxlength="1" class="code" style="width: 40px; height: 40px; text-align: center; font-size: 20px; border: 1px solid #ccc; border-radius: 5px;" />
 		</div>
 	</div>
 	<script type="text/javascript" src="./script.js">
