--- a/main.html
+++ b/main.html
@@ -17,21 +17,23 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="./script.js">
-		const inputs = document.querySelectorAll('.code');
-		inputs.forEach((input, index) => {
-			input.addEventListener('input', () => {
-				if (input.value.length === 1 && index < inputs.length - 1) {
-					inputs[index + 1].focus();
-				}
+		document.addEventListener('DOMContentLoaded', () => {
+			const inputs = document.querySelectorAll('.code');
+			inputs.forEach((input, index) => {
+				input.addEventListener('input', () => {
+					if (input.value.length === 1 && index < inputs.length - 1) {
+						inputs[index + 1].focus();
+					}
+				});
+				input.addEventListener('keydown', (e) => {
+					if (e.key === 'Backspace' && index > 0) {
+						inputs[index - 1].value = '';
+						inputs[index - 1].focus();
+					}
+				});
 			});
-			input.addEventListener('keydown', (e) => {
-				if (e.key === 'Backspace' && input.value === '' && index > 0) {
-					inputs[index - 1].value = '';
-					inputs[index - 1].focus();
-				}
-			});
+			inputs[0].focus();
 		});
-		inputs[0].focus();
 	</script>
 </body>
 </html>
